objects/Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>R00N30000002eE6IEAU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Annual_Lbs__c</fullName>
        <inlineHelpText>Enter the Annual Lbs available to Univar if this request is successful.</inlineHelpText>
        <label>Annual Lbs</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Usage_in_UOM__c</fullName>
        <inlineHelpText>Enter the annual usage in the selling &quot;Unit Of Measure&quot; (UOM). The UOM could be Lbs, Gallons, Each, Tons, etc.</inlineHelpText>
        <label>Annual Usage in UOM</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>2/15/10:  SM:  Changed field name from &quot;Application&quot; to &quot;Specific Use&quot; to keep the CPP, OPP, Sample Request and Support Request consistent.</description>
        <inlineHelpText>Enter the customer&apos;s application for the product.</inlineHelpText>
        <label>Specific Use</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002eE6OEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Order_Size__c</fullName>
        <inlineHelpText>Enter the customer&apos;s average order size/quantity.</inlineHelpText>
        <label>Average Order Size</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Producer__c</fullName>
        <label>Competitive Producer</label>
        <picklist>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME Hardesty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk-Boley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albright &amp; Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alco Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allchem Ind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allied Universal Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alnor Oil Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alon USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altivia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Supplier__c</fullName>
        <label>Competitive Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME Hardesty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk-Boley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albright &amp; Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alco Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allchem Ind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allied Universal Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alnor Oil Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alon USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altivia</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>Enter the date the support will expire.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <label>FOB</label>
        <picklist>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <picklist>
            <picklistValues>
                <fullName>Beads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crystal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directly Compressible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Crystal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Granular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pellet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablets</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Diaphragm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feed Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhibited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-compendial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parenteral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rayon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reagent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Adhesives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture/Fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Producers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elastomers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics - Circuit Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics - Semi Conductor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy - Petroleum Refinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Flavor Extracts/Syrup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Food Preparations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Products - Pulp/Paper Mill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household &amp; Industrial Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint &amp; Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plating/Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preservatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller/Subdistributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rubber &amp; Plastics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Per_UOM__c</fullName>
        <description>This is the competitor&apos;s confirmed price per the selected Unit Of Measure.</description>
        <inlineHelpText>Enter the competitor&apos;s confirmed price per the UOM selected.</inlineHelpText>
        <label>$ Per UOM</label>
        <precision>8</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pkg__c</fullName>
        <label>Pkg</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Producer_Comments__c</fullName>
        <label>Producer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <description>The Producer or Supplier from where the Support Request will be granted.</description>
        <inlineHelpText>The Producer or Supplier from where the Support Request will be granted.</inlineHelpText>
        <label>Producer</label>
        <picklist>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME Hardesty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk-Boley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albright &amp; Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcan Intl Network US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alco Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allchem Ind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allied Universal Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alnor Oil Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alon USA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <description>Product Manager from the Product Object itself.</description>
        <formula>Product__r.Product_Manager__r.FirstName &amp; &quot; &quot; &amp; Product__r.Product_Manager__r.LastName</formula>
        <inlineHelpText>Product Manager from the Product Object itself.</inlineHelpText>
        <label>Product Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <inlineHelpText>Enter the Univar product number.</inlineHelpText>
        <label>Product Number</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>R00N30000002eE6mEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Refusal__c</fullName>
        <description>Reasons why the Vendor decided not to give Price Support.</description>
        <inlineHelpText>&quot;Poor Market Stewardship&quot;: Meeting the competitive price would reduce the market value of the product overall.</inlineHelpText>
        <label>Reason for Refusal</label>
        <picklist>
            <controllingField>Result__c</controllingField>
            <picklistValues>
                <fullName>Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business handled directly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business serviced by another distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot meet the competitive price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Market Stewardship</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requested_Support_Amount__c</fullName>
        <description>The Support Amount requested from the Vendor.</description>
        <inlineHelpText>The Support Amount you are requesting from the Vendor.</inlineHelpText>
        <label>Requested Support Amount</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requestor_Comments__c</fullName>
        <label>Requestor Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>The result of requesting Support from the Vendor.</description>
        <inlineHelpText>Full Support: Vendor Accepted Support. 
Support w/Condition: e.g., Approved but with minimum order quantity. See Supplier Comments box. 
Partial Support: e.g., Vendor gave .03/# instead of .04/# Support. 
Support Declined: Vendor declined Support.</inlineHelpText>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Full Support Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support with Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_of_Competitive_Info__c</fullName>
        <description>The source of the competitive price information.</description>
        <label>Source of Competitive Info</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor&apos;s Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor&apos;s Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Explained in Requestor Comments</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Support_Amount__c</fullName>
        <description>The amount the Vendor has approved for support.</description>
        <inlineHelpText>Enter the Approved Support Amount requested such as &quot;$0.50 less 10% delivered&quot; or &quot;$0.10 net FOB&quot;.</inlineHelpText>
        <label>Approved Support Amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <inlineHelpText>Select the most appropriate pricing &quot;Unit of Measure&quot; (UOM).</inlineHelpText>
        <label>$ UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>